Fixed dragnbar elements being able to overflow dragnbar and interactive video. [HFJ-1043]

--- a/styles/interactive-video-editor.css
+++ b/styles/interactive-video-editor.css
@@ -10,6 +10,14 @@
   font-style: normal;
 }
 
+.h5p-interactivevideo-editor .h5p-interactive-video {
+  overflow: visible;
+}
+
+.h5p-interactivevideo-editor .h5p-interactive-video .h5p-overlay.h5p-visible {
+  overflow: visible;
+}
+
 .h5p-interactive-video-dragnbar {
   font-size: 1em;
   overflow: hidden;
